# ds003-post-fMRIPrep-analysis

./: .dockerignore  .zenodo.json  Dockerfile  README.md  afni.py  fsl.py  interfaces.py  requirements.txt  results_visualization.ipynb  run.py  setup.cfg  setup.py  spm.py  utils.py  versioneer.py  workflows.py
.circleci/: config.yml
fmriposp/: __init__.py  _version.py
fmriposp/cli/: run.py
fmriposp/workflows/: afni.py  fsl.py  spm.py  utils.py
scripts/: ds109_events.py
