[metadata]
url = https://github.com/poldracklab/ds003-post-fMRIPrep-analysis
author = The CRN developers
author_email = code@oscaresteban.es
maintainer = Oscar Esteban
maintainer_email = code@oscaresteban.es
description = An exemplary task analysis workflow to run on data after preprocessing with fMRIPrep
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache-2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.5
install_requires =
    nipype >=1.2.2
    niworkflows ~= 0.10.3
    pybids ~= 0.9.2
    templateflow ~= 0.4.0
test_requires =
    pytest
    pytest-xdist
    pytest-cov == 2.5.1
    coverage
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    fmriposp=fmriposp.cli.run:main

[options.package_data]

[options.packages.find]
exclude =
    *.tests

[options.extras_require]
datalad =
    datalad

doc =
    sphinx >= 1.5.3
    pydot >= 1.2.3
    pydotplus
docs =
    %(doc)s
test =
    pytest
    pytest-xdist
    pytest-cov == 2.5.1
    coverage
tests =
    %(test)s
all =
    %(datalad)s
    %(doc)s
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = fmriposp/_version.py
versionfile_build = fmriposp/_version.py
tag_prefix =
parentdir_prefix = 
